@@ -8,6 +8,7 @@ Development (next version)
   * All correctness tests and performance clients work on CUDA like they did for OpenCL
 - Kernels are now cached based on their tuning parameters: fits the use-case of 'OverrideParameters'
 - Improved performance for small GEMM problems by going from 3 to 1 optional temporary buffers
+- GEMM kernel selection (direct vs in-direct) is now done automatically using a new tuner
 - Various minor fixes and enhancements
 - Added tuned parameters for various devices (see README)
 
